# wunderground2influxdb

./: .dockerignore  .env.example  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
src/: calibration.py  html_scraper.py  main.py
