[tool.poetry]
name = "wunderground2influx"
version = "0.1.0"
description = ""
authors = ["Jelle <jelle@victoor.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.4"
beautifulsoup4 = "^4.12.2"
requests = "^2.31.0"
lxml = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

