[project]
name = "wunderground2influx"
version = "0.1.0"
description = ""
authors = [
    {name = "Jelle", email = "jelle@victoor.io"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.1.4",
    "beautifulsoup4>=4.12.2",
    "requests>=2.31.0",
    "lxml>=5.0.0",
    "influxdb-client>=1.39.0",
    "typer>=0.12.3",
]

